Added toolbar icons and action; added empty history activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,7 @@
     <string name="phone">Phone number:</string>
     <string name="password">Password:</string>
     <string name="e_mail_example">username@hostname.extension</string>
-    <string name="password_example">A-Z a-z 0-9 - _</string>
+    <string name="password_example">A–Z a–z 0–9 - _</string>
+    <string name="history">History</string>
+    <string name="home">Home</string>
 </resources>
