--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="password_example">A–Z a–z 0–9 - _</string>
     <string name="history">History</string>
     <string name="home">Home</string>
+    <string name="profile_image">Profile Image</string>
 </resources>
